# model_infer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cv_inference.h  ort_infer.h
python/: model.py  model_infer.py  model_trans.py  readme.md
src/: cv_inference.cpp  ort_infer.cpp
